hphp/test/zend/good/ext/dom/tests/dom004.php.skipif
<?hh 
<<__EntryPoint>>
function main() {
  if (!extension_loaded('dom')) die('skip dom extension not available');
  if (!in_array('compress.zlib', stream_get_wrappers())) {
    die('skip compress.zlib wrapper is not available');
  }
}
