hphp/test/zend/bad/ext/dom/tests/dom_xinclude.php.skipif
<?php
require_once('skipif.inc');
in_array('compress.zlib', stream_get_wrappers()) or die('skip compress.zlib wrapper is not available');
?>